# javinizer-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.en.md  GUIDE.md  GUIDE.zh.md  LICENSE  README.en.md  README.md  README.zh.md  actresses.csv  error.txt  genres.csv  install.bat  javbus_debug.html  javinizer.bat  javinizer.ps1  jvSettings.example.json  pyproject.toml  studios.csv
.agent/: rules.md
.agent/rules/: rules.md  workspace_rules.md
.agent/workflows/: add-scraper.md  build-feature.md  debug.md  generate-tests.md  lint.md  meta-prompt.md  project-leader.md  prompt-engineer.md  push-github.md  push.md  quality-check.md  refactor.md  review.md  setup.md  test.md  update-docs.md  verify.md
.github/workflows/: ci.yml
docs/: BRIEF_GUI_Redesign.md  coding_standards.md  comparison-gui.md  comparison-original-vs-py.md  design-specs.md  javinizer-original-analysis.md
docs/api/: endpoints.md
docs/reports/: audit_2026-01-18.md  audit_2026-01-19.md  audit_2026_01_15.md  (+1 more)
javinizer/: __init__.py  __main__.py  aggregator.py  cli.py  cli_common.py  cli_helpers.py  config.py  csv_utils.py  downloader.py  exceptions.py  health.py  logger.py  matcher.py  models.py  nfo.py  sorter.py  thumbs.py  translator.py
tests/: conftest.py  test_aggregator.py  test_cache.py  test_cli.py  test_cli.py.bak  test_concurrency.py  test_csv_utils.py  test_integration.py  test_javbus.py  test_matcher.py  test_mgstage.py  test_models.py  test_multilevel_sort.py  test_rate_limiter.py  test_retry.py  test_scrapers.py  test_sorter.py  test_utils.py  test_web_security.py
(+57 files in other folders)
