[project]
name = "javinizer"
version = "0.2.0-beta.1"
description = "A Python tool to scrape and organize Japanese Adult Video (JAV) files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "javinizer"}]
keywords = ["jav", "scraper", "metadata"]

dependencies = [
    "httpx[socks]>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "undetected-chromedriver>=3.5.0",
    "curl_cffi>=0.6.0",
    "setuptools>=65.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
browser = [
    "playwright>=1.40.0",
]
gui = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
javinizer = "javinizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["javinizer"]

[tool.mypy]
python_version = "3.10"
strict = true
